--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <title>
       Civil Service Alpha Pension Calculator
     </title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1553226936898554"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
